# AcheiMovel

./: .env.example  .gitignore  RADAR_IMOBILIARIO_FLORIPA_SPEC.md  README.md
.claude/: settings.local.json
apps/api/: Dockerfile  alembic.ini  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 20260415_0001_initial_schema.py
apps/api/pkgs/alembic-1.18.4.dist-info/: RECORD
apps/api/pkgs/fastapi-0.135.3.dist-info/: RECORD
apps/api/pkgs/httpx-0.28.1.dist-info/: RECORD
apps/api/pkgs/mako-1.3.11.dist-info/: RECORD
apps/api/pkgs/python_dotenv-1.2.2.dist-info/: RECORD
apps/api/pkgs/rq-2.7.0.dist-info/: RECORD
apps/api/pkgs/selectolax/: lexbor.cp312-win_amd64.pyd  parser.cp312-win_amd64.pyd
apps/api/pkgs/selectolax-0.4.7.dist-info/: RECORD
apps/api/radar/: __init__.py  auth.py  config.py  db.py  main.py  schemas.py
apps/api/radar/alerts/: email.py  ntfy.py  telegram.py
apps/api/radar/models/: __init__.py  alert.py  analysis.py  listing.py  market.py  profile.py  property.py  scrape.py  watchlist.py
apps/api/radar/routes/: deals.py  health.py  market.py  properties.py  scrapers.py  settings.py
apps/api/radar/scrapers/: base.py  blocked_public.py  brognoli.py  caixa.py  chaves_na_mao.py  json_public.py  lanceja.py  leiloeiro_publico.py  loft.py  loft_partner.py  mega_leiloes.py  quintoandar.py  superbid.py
apps/api/radar/services/: analyzer.py  deal_persistence.py  fingerprint.py  ingestion.py  market_stats.py  properties.py  renovation.py  scoring.py
apps/api/tests/: test_analyzer.py  test_fingerprint.py  test_models.py
(+19 files in other folders)
