[project]
name = "radar-floripa-api"
version = "0.1.0"
description = "API do Radar Imobiliario Floripa"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic-settings>=2.4.0",
  "sqlalchemy>=2.0.0",
  "psycopg[binary]>=3.2.0",
  "alembic>=1.13.0",
  "httpx>=0.27.0",
  "selectolax>=0.3.21",
  "playwright>=1.46.0",
  "rq>=1.16.0",
  "redis>=5.0.0",
  "structlog>=24.4.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "ruff>=0.6.0",
  "mypy>=1.11.0"
]

[tool.setuptools.packages.find]
include = ["radar*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
testpaths = ["tests"]
